--- a/express/views/register.ejs
+++ b/express/views/register.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/upper %>
   <h1><%= title %></h1>
-  <form action="/register/registered" method="post">
+  <form action="/api/register/registered" method="post">
     <div class="input-div">
         <label for="name"></label>
         <input type="text" id="name">
