--- a/express/views/registered.ejs
+++ b/express/views/registered.ejs
@@ -1,5 +1,5 @@
 <% include ./partials/upper %>
   <h1><%= title %></h1>
   <p><%= text %></p>
-  <button onclick="location.href='/'"><%= button_text %></button>
+  <button onclick="location.href='/api'"><%= button_text %></button>
 <% include ./partials/lower %>
