--- a/express/views/register.ejs
+++ b/express/views/register.ejs
@@ -3,15 +3,15 @@
   <form action="/api/register" method="post">
     <div class="input-div">
         <label for="name"></label>
-        <input type="text" id="name">
+        <input type="text" id="name" required>
     </div>
     <div class="input-div">
         <label for="surname"></label>
-        <input type="text" id="surname">
+        <input type="text" id="surname" required>
     </div>
     <div class="input-div">
         <label for="email"></label>
-        <input type="email" id="email">
+        <input type="email" id="email" required>
     </div>
     <div class="input-div">
         <input type="submit" id="submit" value="<%= button_text %>">
