--- a/express/views/partials/upper.ejs
+++ b/express/views/partials/upper.ejs
@@ -7,6 +7,6 @@
 
     <title><%= title %></title>
 
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='stylesheets/style.css' />
   </head>
   <body>
