--- a/express/views/index.ejs
+++ b/express/views/index.ejs
@@ -2,4 +2,5 @@
   <h1><%= title %></h1>
   <p><%= text %></p>
   <button onclick="location.href='/api/register'"><%= button_text %></button>
+  <button onclick="location.href='/'">Go back</button>
 <% include ./partials/lower %>
