--- a/express/views/register.ejs
+++ b/express/views/register.ejs
@@ -15,6 +15,7 @@
     </div>
     <div class="input-div">
         <input type="submit" id="submit" value="<%= button_text %>">
+        <button onclick="location.href='/'">Go back</button>
     </div>
   </form>
 <% include ./partials/lower %>
